--- a/app/globals.css
+++ b/app/globals.css
@@ -85,6 +85,18 @@
       top: 3rem;
     }
   }
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .rotating {
+    animation: rotate 1s linear infinite; /* 调整1s为你想要的旋转速度 */
+  }
 }
 
 @layer utilities {
