--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,33 @@
   .rotating {
     animation: rotate 1s linear infinite; /* 调整1s为你想要的旋转速度 */
   }
+
+  @keyframes rotate1 {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(-180deg);
+    }
+  }
+
+  @keyframes scale {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0.7);
+    }
+  
+  }
+
+  .rotate-animation {
+    animation: rotate1 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .scale-animation {
+    animation: scale 0.6s;
+  }
 }
 
 @layer utilities {
